--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "svg-path-editor",
+  "name": "svg",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
@@ -45,5 +45,7 @@
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
     "typescript": "~4.0.3"
-  }
+  },
+  "keywords": [],
+  "description": "Интернет-редактор для создания и управления путями SVG"
 }
